# OptiRoulette

./: .gitignore  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: configuration.md  release.md
examples/: quick_cifar100_optiroulette.ipynb  quick_tiny_imagenet_optiroulette.ipynb
src/OptiRoulette/: __init__.py
src/optiroulette/: __init__.py  compatibility.py  defaults.py  opti_roulette.py  optimizer_factory.py  optimizer_pool.py
src/optiroulette/resources/: __init__.py  optimized.yaml
tests/: test_defaults.py  test_smoke.py
